# verix-rs-opensource

./: .gitignore  Cargo.toml  README.md  build.sh
src/: check.rs  flags.rs  init.rs  log.rs  main.rs  panel.rs
src/core/: aes_utils.rs  file_utils.rs  system_utils.rs
src/public/: already_login.impl  index.impl
